# vore

./: .gitattributes  .gitignore  CMakeLists.txt  GetCoverage.ps1  GetCoverage.sh  Profile.sh  README.md  codecov.yml  go.mod  go.work  main.go  profile.prof
.github/workflows/: cmake.yml  go.yml  npm.yml
docs/: DocumentationHome.md  GettingStarted.md  RegexComparison.md  TODO.md
docs/examples/: csv.vore  email.vore  fizzbuzz.vore  floatingpoint.vore  htmltags.vore  numericranges.vore
docs/language/: LanguageDetails.md  RegexComparison.md
libvore/: README.md  algorithm.go  algorithm_test.go  ast.go  bytecode.go  converter.go  engine.go  errors.go  execute.go  execute_check_test.go  exports.go  generate.go  go.mod  helpers_test.go  lexer.go  lexer_test.go  memorystream.go  memorystream_test.go  parser.go  parser_regexp.go  path.go  pattern_test.go  queue.go  queue_test.go  range.go  semanticcheck.go  stack.go  stack_test.go  testhelpers.go  vbufferedfile.go  vinterfaces.go  voptional.go  voptional_test.go  vore.go  vore_ast_test.go  vore_find_test.go  vore_test.go  voreerror.go  vorefileerror.go  vorerror.go  (+3 more)
libvore-syntax-highlighter/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
libvore-syntax-highlighter/syntaxes/: vore.tmLanguage.json
libvore/algo/: README.md  algorithm.go  algorithm_test.go  go.mod
libvore/ast/: README.md  ast.go  go.mod  helpers_test.go  lexer.go  lexer_test.go  lexerror.go  parseerror.go  parser.go  parser_regexp.go
libvore/bytecode/: README.md  bytecode.go  generate.go  generror.go  go.mod  processgenerate.go  processgenerate_test.go  semanticcheck.go  semanticerror.go  value.go
libvore/ds/: README.md  go.mod  indexable.go  indexable_test.go  optional.go  optional_test.go  pair.go  pair_test.go  queue.go  queue_test.go  range.go  range_test.go  stack.go  stack_test.go
libvore/engine/: README.md  engine.go  execerror.go  execute.go  execute_check_test.go  go.mod  matches.go  replacemode.go  replacemode_test.go  search.go  searchengine.go  values.go
libvore/files/: README.md  bufferedfile.go  go.mod  interfaces.go  memorystream.go  memorystream_test.go  path.go  path_test.go  reader.go  reader_writer_test.go  writer.go
libvore/testutils/: README.md  asserts.go  fs.go  go.mod  helpers.go
libvorejs/: README.md  go-loader.js  package-lock.json  package.json  webpack.config.js
libvorejs/demo/: index.html  index.js
libvorejs/src/: go.mod  libvore.d.ts  libvore.js  main.go
src/: CMakeLists.txt  ast.cpp  ast.hpp  ast_compile.cpp  ast_evaluate.cpp  ast_execute.cpp  ast_extras.cpp  ast_match.cpp  ast_print.cpp  ast_string.cpp  base.l  base.y  context.cpp  context.hpp  fsm.cpp  fsm.hpp  main.cpp  match.cpp  match.hpp  vore.cpp  vore.hpp  vore_options.hpp  vore_util.cpp  vore_util.hpp
src/compiler/: ast.cpp  ast.hpp  ast_pushdown.cpp  context.cpp  context.hpp  fsm.cpp  fsm.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  pushdown.cpp  pushdown.hpp
src/visualizer/: viz.cpp  viz.hpp
test/: CMakeLists.txt  helper.cpp  helper.hpp  test_main.cpp
test/find_stmt/: atom.test.cpp  extra.test.cpp  in.test.cpp  initial.test.cpp
test/initial/: initial.test.cpp
test/test_files/: cacodes.txt  multiline.txt
test/utilities_test/: utilities.test.cpp
test_vore/: repeat_test.v  replace_test.v
tests/: lex_test.tql
vorejs/: LICENSE  build.sh  go-loader.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
vorejs/demo/: index.html  index.js
vorejs/lib/: libvore.d.ts
vorejs/src/: libvore.js  (+2 more)
(+10 files in other folders)
